--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,43 @@
-version: '3'
+version: '3.1'
+
 services:
-  ghost_db:
-    hostname: ghost_db
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: $MYSQL_PASSWORD
-    networks:
-      - backghost
 
   ghost:
     image: ghost:5-alpine
     restart: always
-    ports:
-      - 8080:2368
-    depends_on:
-      - ghost_db
-
+    # ports:
+      # - 8080:2368
     environment:
       # see https://ghost.org/docs/config/#configuration-options
-      database__client: ghost_db
+      database__client: mysql
       database__connection__host: db
       database__connection__user: root
-      database__connection__password: $MYSQL_PASSWORD
+      database__connection__password: $MYSQL_ROOT_PASSWORD
       database__connection__database: ghost
-      url: http://localhost:8080
-
+      url: https://ghost.tibillet.coop # this url value is just an example, and is likely wrong for your environment!
+      #NODE_ENV: development # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
+    volumes:
+      - ghost:/var/lib/ghost/content
     labels:
       - traefik.enable=true
       - traefik.docker.network=frontend
       - traefik.http.routers.ghost.tls.certresolver=myresolver
       - traefik.http.routers.ghost.rule=Host(`$DOMAIN`)
-      - traefik.http.services.ghost.loadbalancer.server.port=8005
+      - traefik.http.services.ghost.loadbalancer.server.port=2368
+    networks:
+      - frontend
 
-    # command: "sleep 5d"
-    command: "poetry run bash launch.sh"
+  db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+    volumes:
+      - ./db:/var/lib/mysql
     networks:
       - frontend
       - backghost
+
 
 
       
@@ -45,3 +45,5 @@ networks:
   frontend:
     external: true
   backghost:
+
+
