--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,26 @@
 services:
+  ghost_db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+    volumes:
+      - ./db:/var/lib/mysql
+    networks:
+      - frontend
+      - backghost
+
   ghost:
     image: ghost:5-alpine
+    depends_on:
+      - ghost_db
     restart: always
     # ports:
       # - 8080:2368
     environment:
       # see https://ghost.org/docs/config/#configuration-options
       database__client: mysql
-      database__connection__host: db
+      database__connection__host: ghost_db
       database__connection__user: root
       database__connection__password: $MYSQL_ROOT_PASSWORD
       database__connection__database: ghost
@@ -24,16 +37,7 @@ services:
     networks:
       - frontend
 
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-    volumes:
-      - ./db:/var/lib/mysql
-    networks:
-      - frontend
-      - backghost
+
 
       
 networks:
