--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     volumes:
       - ./db:/var/lib/mysql
     networks:
-      - frontend
       - backghost
 
   ghost:
@@ -36,6 +35,7 @@ services:
       - traefik.http.services.ghost.loadbalancer.server.port=2368
     networks:
       - frontend
+      - backghost
 
 
 
