--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,44 @@
 services:
-  ghost_db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-    volumes:
-      - ./db:/var/lib/mysql
-    networks:
-      - backghost
+    ghost:
+        image: ghost:latest
+        container_name: ghost-rtlx
+        hostname: ghost-RTLx
+        volumes:
+        - ./config.production.json:/var/lib/ghost/config.production.json:z
+        - ./ghost:/var/lib/ghost/content
+        environment:
+            NODE_ENV: production
+        restart: unless-stopped
+        networks:
+        - ghost
+        - frontend
+        labels:
+        - traefik.enable=true
+        - traefik.docker.network=frontend
+        - traefik.http.routers.ghost-rtlx.tls.certresolver=myresolver
+        - traefik.http.routers.ghost-rtlx.rule=Host(`$DOMAIN`) 
+        depends_on:
+        - mysql
 
-  ghost:
-    image: ghost:5-alpine
-    depends_on:
-      - ghost_db
-    restart: always
-    # ports:
-      # - 8080:2368
-    environment:
-      # see https://ghost.org/docs/config/#configuration-options
-      database__client: mysql
-      database__connection__host: ghost_db
-      database__connection__user: root
-      database__connection__password: $MYSQL_ROOT_PASSWORD
-      database__connection__database: ghost
-      url: https://ghost.tibillet.coop # this url value is just an example, and is likely wrong for your environment!
-      #NODE_ENV: development # contrary to the default mentioned in the linked documentation, this image defaults to NODE_ENV=production (so development mode needs to be explicitly specified if desired)
-    volumes:
-      - ./content:/var/lib/ghost/content
-    labels:
-      - traefik.enable=true
-      - traefik.docker.network=frontend
-      - traefik.http.routers.ghost.tls.certresolver=myresolver
-      - traefik.http.routers.ghost.rule=Host(`$DOMAIN`)
-      - traefik.http.services.ghost.loadbalancer.server.port=2368
-    networks:
-      - frontend
-      - backghost
+    mysql:
+        image: mysql:8
+        container_name: ghost-mysql
+        hostname: ghost-mysql
+        volumes:
+            - ./db:/var/lib/mysql
+        environment:
+            MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+            MYSQL_USER: user
+            MYSQL_PASSWORD: $MYSQL_PASSWORD
+            MYSQL_DATABASE: ghost
+        restart: unless-stopped
+        networks:
+        - ghost
 
 
 
-      
 networks:
-  frontend:
-    external: true
-  backghost:
-
-
+    ghost:
+        internal: true
+    frontend:
+        external: true
